cleaned up all service logic with better error handling, redundant code adn cleaner logic.